# codepath-simple

./: Makefile  README.md  pyproject.toml
pipeline/: api.py  config.py  db.py  load_from_api.py  load_from_csv.py  load_from_db.py  models.py
pipeline/src/: config.py  db.py  models2.py
