[project]
name = "codepath-simple"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gregg Lind", email = "gregg.lind@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.32",
    "api-client>=1.3.1",
    "polars>=1.4.1",
    "ipython>=8.26.0",
    "pretty-errors>=1.2.25",
    "loguru>=0.7.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
